# chocobot

./: .gitignore  .rspec  .rubocop.yml  .ruby-gemset  .ruby-version  Cargo.toml  Gemfile  Makefile  README.md  Rakefile  chocobot.rb  chocobot.service  run.rb  stop_chocobot.sh
lib/: bot.rb  env.rb  plugins_loader.rb  query.rb  query_forge.rb  server.rb
lib/plugins/: nagios_plugin.rb  octoprint_plugin.rb  rootme_plugin.rb
spec/: env_spec.rb  environment_spec.rb  query_forge_spec.rb  spec_helper.rb
src/: main.rs  state.rs  web.rs
